--- a/changelog.txt
+++ b/changelog.txt
@@ -122,3 +122,4 @@ Version 2.4.0
 - Module Split Rankings: Now consider JU-88 C6 an attacker (it is dynamically switched to fighter like with other attackers depending on the sortie. I.e. if you go hunting with the main gun)
 - Fix bug where sorties were being counted twice for specialized VLives (fighter/attacker/bomber vlives). Happened only if mission was declared to be "won by score".
 - Fix bug where waitress was giving 500 errors when it should have been giving out 404 errors (invalid player IDs).
+- Fix bug where retroactive fixing of captures would sometimes cause stats process to crash.
