--- a/changelog.txt
+++ b/changelog.txt
@@ -214,3 +214,7 @@ Version 1.8.10
 
 - Update to 1.2.60 of IL2 stats.
 - Add in loadout and modifaction support for the p-51b, thanks CountZero!
+
+Version 1.8.11
+
+- Update to 1.2.61 of IL2 stats.
