--- a/changelog.txt
+++ b/changelog.txt
@@ -222,3 +222,7 @@ Version 1.8.11
 Version 1.9.0
 
 - Update to 2.4.0 of enhancements, 1.50 of aircraft mod.
+
+Version 1.9.1
+
+- Update to 1.2.63 of IL2 stats
