--- a/changelog.txt
+++ b/changelog.txt
@@ -124,3 +124,7 @@ Version 2.4.0
 - Fix bug where sorties were being counted twice for specialized VLives (fighter/attacker/bomber vlives). Happened only if mission was declared to be "won by score".
 - Fix bug where waitress was giving 500 errors when it should have been giving out 404 errors (invalid player IDs).
 - Fix bug where retroactive fixing of captures would sometimes cause stats process to crash.
+
+Version 2.4.1
+
+- Module Split Rankings: Fix bug where a VLife award would cause stats process to crash.
