--- a/changelog.txt
+++ b/changelog.txt
@@ -132,3 +132,4 @@ Version 2.4.1
 Version 2.4.2
 
 - Update to latest version of il2 stats (cruise misssles killed are now shown).
+- Fix bug where some halberstadt turrets were not recognized.
