--- a/changelog.txt
+++ b/changelog.txt
@@ -137,3 +137,4 @@ Version 2.4.2
 Version 2.4.3
 
 - Assume that Mosquitos without bombs/rockets are fighters (like the P38).
+- Fix typo that would cause a 500 error for a pilot/gunner page, if that pilot/gunner had destroyed a V-1 missle.
