Fix turret_to_aircraft method for non-english versions of the website.

--- a/changelog.txt
+++ b/changelog.txt
@@ -138,3 +138,4 @@ Version 2.4.3
 
 - Assume that Mosquitos without bombs/rockets are fighters (like the P38).
 - Fix typo that would cause a 500 error for a pilot/gunner page, if that pilot/gunner had destroyed a V-1 missle.
+- Fix errors which caused stacktrace in logs on gunner pages in non english versions of the website, show aircraft image on gunner pages in non-english versions of the website.
