--- a/changelog.txt
+++ b/changelog.txt
@@ -235,7 +235,7 @@ Version 1.9.2
 Version 1.9.3
 
 - Update to 2.4.2 of enhancements.
-- Update to 1.51 of aircraft mod.
+- Update to 1.5.1 of aircraft mod.
 - Update to 1.2.64 of IL2 stats.
 
 Version 1.9.4
@@ -246,3 +246,8 @@ Version 1.9.5
 
 - Fix object.csv - typo was in 1.9.3 which caused the import of the object.csv to not work.
 
+Version 1.9.6
+
+- Update to 2.4.3 of enhancements.
+- Update to 1.5.2 of aircraft mod.
+- Fix bundle-only bug where filtered players profile tab link was broken.
