--- a/changelog.txt
+++ b/changelog.txt
@@ -266,3 +266,10 @@ Version 1.9.9
 
 - Update to 1.2.68 of IL2 stats.
 - Update to 3.7 of tank mod.
+
+Version 1.10.0
+
+- Update to 1.2.69 of il2 stats
+- Update to 3.8 of tank mod
+- Update to 2.50 of enhancements
+- Update to 1.5.3 of aircraft mod
