--- a/changelog.txt
+++ b/changelog.txt
@@ -273,3 +273,7 @@ Version 1.10.0
 - Update to 3.8 of tank mod
 - Update to 2.50 of enhancements
 - Update to 1.5.3 of aircraft mod
+
+Version 1.10.1
+
+- Update to 1.2.70 of il2 stats
