--- a/changelog.txt
+++ b/changelog.txt
@@ -150,3 +150,7 @@ Version 2.5.0
 - Add new module "Last mission ironman", which aggregates information about the VLifes during the last mission. (WIP: Some translations missing)
 - Add new modulke "itaf_layout", an alternative 3 column layout for the front page - requires the use of some other modules.
 - Add new config parameter "ironman_style", can be set to 'classic' or 'both' - classic is the behavior for Ironman stats as before (best/current VLife depending on the tour), both lets you see both behaviors for all tours.
+
+Version 2.5.1
+
+- Fix bug where last mission players on itaf layout was not rendering coalition correclty (always both coalitions instead of the one the player played as).
