--- a/changelog.txt
+++ b/changelog.txt
@@ -271,9 +271,14 @@ Version 1.10.0
 
 - Update to 1.2.69 of il2 stats
 - Update to 3.8 of tank mod
-- Update to 2.50 of enhancements
+- Update to 2.5.0 of enhancements
 - Update to 1.5.3 of aircraft mod
 
 Version 1.10.1
 
 - Update to 1.2.70 of il2 stats
+
+Version 1.10.2
+
+- Update to 1.2.71 of il2 stats
+- Update to 2.5.2 of enhancements.
