--- a/changelog.txt
+++ b/changelog.txt
@@ -158,3 +158,7 @@ Version 2.5.1
 Version 2.5.2
 
 - Fix bug with itaf layout (thanks ITAF_LG965)
+
+Version 2.5.3
+
+- Add human-readable strings for new bullets. Fixes a bug where (among others) the low caliber machine gun of the BF 109s would render machine-readable bullet types instead of human-readable ones in ammo breakdowns.
